refactor: cleaned up documentation